--- a/MusicGenerationPipeline.ipynb
+++ b/MusicGenerationPipeline.ipynb
@@ -522,21 +522,39 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "outputs": [],
+      "source": [
+        "def sample(preds, temperature=1.0):\n",
+        "  #Helper function to sample an index from a probability array.\n",
+        "  preds = np.asarray(preds).astype('float64')\n",
+        "  preds = np.exp(np.log(preds) / temperature)\n",
+        "  preds = preds / np.sum(preds)\n",
+        "  probas = np.random.multinomial(1, preds, 1)\n",
+        "  return np.argmax(probas)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "zjWjzlEXui7-"
       },
       "outputs": [],
       "source": [
-        "def music_maker(seed_vec,model_type,number_unique,unique,num_notes = 150):\n",
+        "def music_maker(seed_vec,model_type,number_unique,unique,num_notes = 64):\n",
         "  music = []\n",
+        "  diversity = 0.7\n",
         "  arr = np.zeros((len(seed_vec)+num_notes,number_unique))\n",
         "  for c,i in enumerate(seed_vec):\n",
         "    arr[c] = i\n",
         "\n",
         "  for i in range(0,num_notes,1):\n",
+        "    d_arr = np.zeros(number_unique)\n",
         "    pred = model_type.predict(np.reshape(arr[i:len(arr)-num_notes+i], (1, len(arr[i:len(arr)-num_notes+i]),number_unique)),verbose = 0)[0]\n",
-        "    music.append(one_hot_decode(pred,all_values = unique)[0])\n",
-        "    arr[len(seed_vec)+i] = pred\n",
+        "    diverse = sample(pred, diversity)\n",
+        "    d_arr[diverse] = 1\n",
+        "    music.append(one_hot_decode(d_arr,all_values = unique)[0])\n",
+        "    arr[len(seed_vec)+i] = d_arr\n",
         "  \n",
         "  return music"
       ]
